feat: define domain layer with models, enums and interfaces
- Establish DDD-based domain structure for business logic.
- Implement UserRole enum to mirror backend security roles.
- Create User and Product models with strict TypeScript typing.
- Define Auth interfaces for cookie-based session management.
- Remove legacy type definitions in favor of domain-driven models.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,22 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "ES2022",
-    "module": "preserve"
+    "module": "preserve",
+    "baseUrl": "./",
+    "paths": {
+      "@app/*": ["src/app/*"],
+      "@core/*": ["src/core/*"],
+      "@domain/*": ["src/app/domain/*"],
+      "@enums/*": ["src/app/domain/enums/*"],
+      "@models/*": ["src/app/domain/models/*"],
+      "@dtos/*": ["src/app/domain/dtos/*"],
+      "@layouts/*": ["src/app/layouts/*"],
+      "@auth/*": ["src/app/features/auth/*"],
+      "@catalog/*": ["src/app/features/catalog/*"],
+      "@inventory/*": ["src/app/features/inventory/*"],
+      "@users-admin/*": ["src/app/features/users-admin/*"],
+      "@shared/*": ["src/app/shared/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
