feat(auth): implement core security and state management
- Create AuthStore using Angular Signals for reactive user state.
- Implement functional authInterceptor to handle withCredentials.
- Add AuthService for login/logout flows and API orchestration.
- Define computed signals for authentication and role-based status.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "baseUrl": "./",
     "paths": {
       "@app/*": ["src/app/*"],
-      "@core/*": ["src/core/*"],
+      "@core/*": ["src/app/core/*"],
       "@domain/*": ["src/app/domain/*"],
       "@enums/*": ["src/app/domain/enums/*"],
       "@models/*": ["src/app/domain/models/*"],
