feat(admin): implement product and user management with signal-based stores and forms
- Implement AdminLayout with responsive sidebar and role-based navigation.
- Create Product and User stores using httpResource for declarative data fetching.
- Signal Forms API with conditional validation logic.
- Add functional inventory and user lists with pagination and CRUD operations.
- Enhance UX with loading states, success feedback, and confirmation modals.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "@domain/*": ["src/app/domain/*"],
       "@enums/*": ["src/app/domain/enums/*"],
       "@models/*": ["src/app/domain/models/*"],
+      "@store/*": ["src/app/core/store/*"],
       "@dtos/*": ["src/app/domain/dtos/*"],
       "@layouts/*": ["src/app/layouts/*"],
       "@auth/*": ["src/app/features/auth/*"],
